--- a/public/css/ideas.css
+++ b/public/css/ideas.css
@@ -1,3 +1,8 @@
+* {
+    text-align: center;
+    margin-top:10px;
+}
+
 #newIdeas {
     background-color:Cornsilk;
     padding:10px;
@@ -12,6 +17,7 @@
     font-weight:bold;
     font-size:1.6rem;
 }
+
 #newIdeas ul {
     margin:0;
     padding:0;
